[package]
name = "helmctl"
version = "2.0.0"
edition = "2021"
description = "A comprehensive CLI tool for Helmfile operations and Kubernetes deployments"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/akmshasan/helmctl"
keywords = ["kubernetes", "helmfile", "cli", "devops", "deployment"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "helmctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.8.0"
tokio-test = "0.4.4"
serial_test = "3.2.0"
mockall = "0.14.0"
rstest = "0.26.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
